Fixed bug with images not showing up depending on URL.

--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ div#NavBar {
 div#imageViewer {
 	background: url("Images/CenterContent.png") no-repeat;
 	background-size:cover;
-	padding:35px;
 }
 .in1 {
 	margin-left:30px;
